$Rev$
[2008/03/22]
web2py_plugin       Add web2py plugin

[2008/03/17]
HtmlPage.py mRestFileType.py Del acp/rst
                    Improve ReST document render, and fix the setfocus lost bug when
                    auto modified the html output, thanks a lot to ygao
                    
[2008/03/15]
mPyRun.py           Add auto detect python interpreter in windows platform

[2008/03/13]
mScript.py          Fix script filename cannot be unicode(chinese) bug

[2008/03/04]
*                   Enhance on_modified process, improve the edit speed
mShell.py           Strip leading space when doing "Run in Shell"
mAutoCheck.py       Chanage auto file check to Editor on_set_focus event
SvnSettings.py      Fix password widget it Text bug, changed to Password
mFileNew.py         Fix template line-ending not match the default line-ending setting

[2008/03/03]
Editor.py mFormat.py mLineending.py
                    Fix press tab and convert EOF too slow problem

[2008/03/02]
EditorFactory.py FlatNotebook.py
                    Fix tab invisible bug after changing size or changing the page title
mLineending.py      Add strip line ending when saving functionality and strip line ending menu item
                    in Edit/Format.

[2008/03/01]
mLineending.py      Fix copy and paste lineending is not correct bug

[2008/02/16]
Editor.py mEditor.py FlatNotebook.py mInputAssistant.py
                    Fix smart tabs bug.

[2008/02/15]
Editor.py           Skip control keys on keydown event

[2008/01/18]
common.py           Fix webopen bug, cann't correctly deal with 'mailto:'
mDDESupport.py      Fix DDE bug, thanks to LP <liupengf12@gmail.com>

[2008/01/16]
plugins/SpellCheck.py  67598092
                    Refactor interface

[2008/01/15]
common.py           Add icon set theme support.

[2008/01/14]
PrefDialog.py mPreference.py
                    Change preference dialog from notebook to treebook
AsyncAction.py mInputAssistant.py